<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="country"
            type="com.dicoding.myrecyclerview.model.global.Country" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_background"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_country_cons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@{country.name}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider_country"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country_name" />

            <TextView
                android:id="@+id/text_country_kasus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:numberText="@{country.confirmed}"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/text_country_sembuh"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_country" />

            <TextView
                android:id="@+id/text_country_sembuh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:numberText="@{country.recovered}"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/text_country_meninggal"
                app:layout_constraintStart_toEndOf="@id/text_country_kasus"
                app:layout_constraintTop_toBottomOf="@+id/divider_country" />

            <TextView
                android:id="@+id/text_country_meninggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:numberText="@{country.deaths}"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_country_sembuh"
                app:layout_constraintTop_toBottomOf="@+id/divider_country" />

            <TextView
                android:id="@+id/text_country_kasus_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kasus"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/text_country_sembuh"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country_kasus" />

            <TextView
                android:id="@+id/text_country_sembuh_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sembuh"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/text_country_meninggal_title"
                app:layout_constraintStart_toEndOf="@id/text_country_kasus_title"
                app:layout_constraintTop_toBottomOf="@+id/text_country_kasus" />

            <TextView
                android:id="@+id/text_country_meninggal_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/meninggal_dunia"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_country_sembuh_title"
                app:layout_constraintTop_toBottomOf="@+id/text_country_kasus" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>